# seed

./: README.md  index.html  package.json
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: carter.rs  main.rs
src/app/: app.tsx  frame.tsx  router.tsx
src/components/: blobs.tsx  book.tsx  continue.tsx  drawer.tsx  frame.tsx  listener.tsx  play.tsx
src/lib/: import.ts  tauri.ts
src/pages/: account.tsx  connections.tsx  credentials.tsx  offline.tsx  online.tsx  overview.tsx  packages.tsx  preferences.tsx  settings.tsx  snow.tsx
src/state/: config.ts  events.ts  library.ts  state.ts  user.ts
src/styles/: app.css  blobs.css  book.css  default.css  defaults.css  drawer.css  frame.css  pageConnections.css  pageCredentials.css  pageExperience.css  pagePackages.css  pagePreferences.css  pageSnow.css  settings.css
